--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -6,6 +6,9 @@ html, body { font-family: sans-serif; font-size: 14px; }
 #workstationContextMenu button.selected::before, #boardContextMenu button.selected::before, #taskContextMenu button.selected::before { position: absolute; left: 10px; top: 12px; content: ' '; /*border: 1px solid black;*/ background: black; width: 6px; height: 6px; border-radius: 8px; }
 #workstationContextMenu button.selected:hover::before, #boardContextMenu button.selected:hover::before, #taskContextMenu button.selected:hover::before { background: white; }
 #workstationContextMenu button:hover, #boardContextMenu button:hover, #taskContextMenu button:hover { background: #009688; color: white; }
+#workstationContextMenu button.delete:hover, #boardContextMenu button.delete:hover, #taskContextMenu button.delete:hover { background: #BF3C25; }
 #workstationContextMenu h4, #boardContextMenu h4, #taskContextMenu h4 { margin: 5px 0; padding: 0; font-size: 11px; font-weight: normal; color: #666; }
+
+.delete { color: #BF3C25; }
 
 /*# sourceMappingURL=hanging-todo.css.map */
