--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -1,3 +1,5 @@
+$deleteColor: #BF3C25;
+
 html, body {
 	font-family: sans-serif;
 	font-size: 14px;
@@ -45,6 +47,10 @@ html, body {
 			background: #009688;
 			color: white;
 		}
+
+		&.delete:hover {
+			background: $deleteColor;
+		}
 	}
 
 	h4 {
@@ -54,4 +60,8 @@ html, body {
 		font-weight: normal;
 		color: #666;
 	}
+}
+
+.delete {
+	color: $deleteColor;
 }
