--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -1,14 +1,88 @@
-html, body { font-family: sans-serif; font-size: 14px; }
+@charset "UTF-8";
+html, body, input, button { font-family: sans-serif; font-size: 14px; }
 
-#workstationContextMenu, #boardContextMenu, #taskContextMenu { background: #eee; padding: 5px; position: absolute; min-width: 200px; }
-#workstationContextMenu button, #boardContextMenu button, #taskContextMenu button { display: block; width: 100%; background: none; border: none; padding: 8px; text-align: left; padding-left: 25px; }
+html, body { margin: 0; padding: 0; }
+
+.topbar { overflow: hidden; }
+.topbar .select { background: #eee; }
+
+.user { float: right; margin-right: 10px; }
+.user img { margin-right: 5px; vertical-align: middle; max-height: 40px; }
+
+#curWorkstationDiv { cursor: default; padding: 10px; background: #ddd; height: 40px; box-sizing: border-box; line-height: 20px; width: 100%; max-width: 300px; position: relative; color: #666; }
+#curWorkstationDiv::before { color: #999; position: absolute; content: '▼'; right: 10px; top: 10px; }
+#curWorkstationDiv.expanded { background: #ccc; }
+#curWorkstationDiv.expanded::before { content: '▲'; }
+#curWorkstationDiv:hover { background: #009688; color: white; }
+#curWorkstationDiv:hover::before { color: rgba(255, 255, 255, 0.5); }
+
+#workstationSelectionDiv { background: #ddd; max-width: 300px; margin-bottom: 15px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); }
+#workstationSelectionDiv ul { list-style: none; margin: 0; padding: 0; }
+#workstationSelectionDiv li { cursor: default; margin: 0; padding: 10px; }
+#workstationSelectionDiv li:hover { background: #009688; color: white; }
+#workstationSelectionDiv li.selected { color: #666; background: #ccc; }
+#workstationSelectionDiv li.selected:focus { margin: 4px; border: 1px solid #bbb; padding: 5px; cursor: text; background: white; box-sizing: border-box; }
+#workstationSelectionDiv input { width: calc(100% - 10px); box-sizing: border-box; padding: 5px; margin: 5px; }
+
+#workstationContextMenu, #boardContextMenu, #taskContextMenu { background: #eee; padding: 5px; position: absolute; min-width: 200px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); }
+#workstationContextMenu button, #boardContextMenu button, #taskContextMenu button { display: block; width: 100%; background: none; border: none; padding: 8px; text-align: left; padding-left: 25px; border-radius: unset; }
 #workstationContextMenu button.selected, #boardContextMenu button.selected, #taskContextMenu button.selected { background: #ddd; /*color: white;*/ font-weight: bold; position: relative; }
 #workstationContextMenu button.selected::before, #boardContextMenu button.selected::before, #taskContextMenu button.selected::before { position: absolute; left: 10px; top: 12px; content: ' '; /*border: 1px solid black;*/ background: black; width: 6px; height: 6px; border-radius: 8px; }
 #workstationContextMenu button.selected:hover::before, #boardContextMenu button.selected:hover::before, #taskContextMenu button.selected:hover::before { background: white; }
 #workstationContextMenu button:hover, #boardContextMenu button:hover, #taskContextMenu button:hover { background: #009688; color: white; }
 #workstationContextMenu button.delete:hover, #boardContextMenu button.delete:hover, #taskContextMenu button.delete:hover { background: #BF3C25; }
-#workstationContextMenu h4, #boardContextMenu h4, #taskContextMenu h4 { margin: 5px 0; padding: 0; font-size: 11px; font-weight: normal; color: #666; }
+#workstationContextMenu h4, #boardContextMenu h4, #taskContextMenu h4 { margin: 5px 5px; padding: 0; font-size: 11px; font-weight: normal; color: #666; }
+
+.boards { padding: 0 5px; border-bottom: 2px solid #009688; margin: 5px 0 10px; }
+.boards ul { display: inline-block; list-style: none; margin: 5px 0 0; padding: 0; }
+.boards li, .boards input { display: inline-block; color: #666; vertical-align: bottom; }
+.boards li { padding: 10px 15px; margin: 0 0 0 2px; background: #eee; border-radius: 10px 10px 0 0; cursor: default; }
+.boards li:hover { background: #009688; color: white; }
+.boards li.selected { margin-bottom: -2px; background: white; color: #009688; border: 2px solid #009688; border-bottom: none; }
+.boards li:focus { cursor: text; /* @TODO */ }
+.boards input { vertical-align: top; margin: 7px 0 0 5px; padding: 5px 7px; box-sizing: border-box; }
+
+#taskWorkstationSelect { display: inline-block; }
+
+#tasksDiv { margin: 15px; }
+#tasksDiv ul { list-style: none; margin: 10px 0; padding: 0; }
+#tasksDiv li { margin: 5px 0; padding: 5px; background: #f1f1f1; cursor: default; border-radius: 10px; }
+#tasksDiv li:hover { background: #e2e2e2; }
+#tasksDiv li button { width: 32px; height: 32px; margin-right: 2px; color: transparent; }
+#tasksDiv li button:hover { color: white; }
+#tasksDiv li span { display: inline-block; padding: 7px; min-width: 500px; border: 1px solid transparent; }
+#tasksDiv li span:focus { cursor: text; background: white; border-color: #bbb; }
+
+#addTaskInput { padding: 10px 10px 10px 45px; min-width: 500px; margin-right: 7px; }
 
 .delete { color: #BF3C25; }
+
+hr { margin: 5px 0; border: none; border-top: 1px solid #bbb; }
+
+button { border: 1px solid #666; padding: 5px 7px; border-radius: 5px; color: #666; background: none; }
+button:hover { background: #009688; color: white; border-color: #009688; }
+
+input { padding: 5px; background: white; border: 1px solid #bbb; min-width: 200px; }
+input:hover { background: #f1f1f1; }
+input:focus { background: white; }
+
+label { margin: 0; padding: 2px 1px; display: inline-block; border-top: 2px solid #009688; border-bottom: 2px solid #009688; }
+label:first-child { padding-left: 2px; border-left: 2px solid #009688; border-radius: 8px 0 0 8px; }
+label:last-child { padding-right: 2px; border-right: 2px solid #009688; border-radius: 0 8px 8px 0; }
+
+input[type=radio] { display: none; /* -webkit-appearance: none; */ }
+
+label span { display: block; padding: 5px 12px; color: #009688; }
+label span:hover { color: white; background: #009688; }
+
+input:checked + span { background: #009688; color: #fff; }
+input.default:checked + span { background: #bbb; }
+input.default + span:hover { background: #bbb; }
+
+label:first-child span { border-radius: 6px 0 0 6px; }
+
+label:last-child span { border-radius: 0 6px 6px 0; }
+
+.default label { border-color: #bbb; }
 
 /*# sourceMappingURL=hanging-todo.css.map */
