--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -11,12 +11,12 @@ html, body { margin: 0; padding: 0; }
 
 #curWorkstationDiv { cursor: default; padding: 10px; background: #ddd; height: 40px; box-sizing: border-box; line-height: 20px; width: 100%; max-width: 300px; position: relative; color: #666; }
 #curWorkstationDiv::before { color: #999; position: absolute; content: '▼'; right: 10px; top: 10px; }
-#curWorkstationDiv.expanded { background: #ccc; }
-#curWorkstationDiv.expanded::before { content: '▲'; }
 #curWorkstationDiv:hover { background: #009688; color: white; }
 #curWorkstationDiv:hover::before { color: rgba(255, 255, 255, 0.5); }
+#curWorkstationDiv.expanded { background: #aaa; color: #666; }
+#curWorkstationDiv.expanded::before { content: '▲'; color: #666; }
 
-#workstationSelectionDiv { background: #ddd; max-width: 300px; margin-bottom: 15px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); }
+#workstationSelectionDiv {position: absolute;background: #ddd;width: 100%;max-width: 300px;margin-bottom: 15px;box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3);}
 #workstationSelectionDiv ul { list-style: none; margin: 0; padding: 0; }
 #workstationSelectionDiv li { cursor: default; margin: 0; padding: 10px; }
 #workstationSelectionDiv li:hover { background: #009688; color: white; }
