--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -16,12 +16,12 @@ html, body { margin: 0; padding: 0; }
 #curWorkstationDiv.expanded { background: #aaa; color: #666; }
 #curWorkstationDiv.expanded::before { content: '▲'; color: #666; }
 
-#workstationSelectionDiv {position: absolute;background: #ddd;width: 100%;max-width: 300px;margin-bottom: 15px;box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3);}
+#workstationSelectionDiv { position: absolute; background: #ddd; width: 100%; max-width: 300px; margin-bottom: 15px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); }
 #workstationSelectionDiv ul { list-style: none; margin: 0; padding: 0; }
 #workstationSelectionDiv li { cursor: default; margin: 0; padding: 10px; }
-#workstationSelectionDiv li:hover { background: #009688; color: white; }
+#workstationSelectionDiv li:hover, #workstationSelectionDiv li.menuon { background: #009688; color: white; }
 #workstationSelectionDiv li.selected { color: #666; background: #ccc; }
-#workstationSelectionDiv li.selected:focus { margin: 4px; border: 1px solid #bbb; padding: 5px; cursor: text; background: white; box-sizing: border-box; }
+#workstationSelectionDiv li:focus { margin: 4px; border: 1px solid #bbb; padding: 5px; cursor: text; background: white; box-sizing: border-box; color: black; }
 #workstationSelectionDiv input { width: calc(100% - 10px); box-sizing: border-box; padding: 5px; margin: 5px; }
 
 #workstationContextMenu, #boardContextMenu, #taskContextMenu { background: #eee; padding: 5px; position: absolute; min-width: 200px; box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3); }
@@ -37,9 +37,10 @@ html, body { margin: 0; padding: 0; }
 .boards ul { display: inline-block; list-style: none; margin: 5px 0 0; padding: 0; }
 .boards li, .boards input { display: inline-block; color: #666; vertical-align: bottom; }
 .boards li { padding: 10px 15px; margin: 0 0 0 2px; background: #eee; border-radius: 10px 10px 0 0; cursor: default; }
-.boards li:hover { background: #009688; color: white; }
-.boards li.selected { margin-bottom: -2px; background: white; color: #009688; border: 2px solid #009688; border-bottom: none; }
-.boards li:focus { cursor: text; /* @TODO */ }
+.boards li:hover, .boards li.menuon { background: #009688; color: white; }
+.boards li:focus { border: 1px solid #bbb; cursor: text; background: white; color: black; margin: -1px -1px -1px 1px; }
+.boards li.selected { margin: 0 0 -2px 2px; background: white; color: #009688; border: 2px solid #009688; border-bottom: none; }
+.boards li.selected:focus { color: black; }
 .boards input { vertical-align: top; margin: 7px 0 0 5px; padding: 5px 7px; box-sizing: border-box; }
 
 #taskWorkstationSelect { display: inline-block; }
@@ -48,6 +49,7 @@ html, body { margin: 0; padding: 0; }
 #tasksDiv ul { list-style: none; margin: 10px 0; padding: 0; }
 #tasksDiv li { margin: 5px 0; padding: 5px; background: #f1f1f1; cursor: default; border-radius: 10px; }
 #tasksDiv li:hover { background: #e2e2e2; }
+#tasksDiv li.selected { background: #bee0dd; }
 #tasksDiv li button { width: 32px; height: 32px; margin-right: 2px; color: transparent; }
 #tasksDiv li button:hover { color: white; }
 #tasksDiv li span { display: inline-block; padding: 7px; min-width: 500px; border: 1px solid transparent; }
