--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -253,8 +253,9 @@ html, body {
 			background: #e2e2e2;
 		}
 
-		&.selected {
+		&:focus, &.selected {
 			background: #bee0dd;
+			outline: none;
 		}
 
 		button {
