--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -49,7 +49,7 @@ html, body { margin: 0; padding: 0; }
 #tasksDiv ul { list-style: none; margin: 10px 0; padding: 0; }
 #tasksDiv li { margin: 5px 0; padding: 5px; background: #f1f1f1; cursor: default; border-radius: 10px; }
 #tasksDiv li:hover { background: #e2e2e2; }
-#tasksDiv li.selected { background: #bee0dd; }
+#tasksDiv li:focus, #tasksDiv li.selected { background: #bee0dd; outline: none; }
 #tasksDiv li button { width: 32px; height: 32px; margin-right: 2px; color: transparent; }
 #tasksDiv li button:hover { color: white; }
 #tasksDiv li span { display: inline-block; padding: 7px; min-width: 500px; border: 1px solid transparent; }
