--- a/css/hanging-todo.css
+++ b/css/hanging-todo.css
@@ -50,8 +50,8 @@ html, body { margin: 0; padding: 0; }
 #tasksDiv li { margin: 5px 0; padding: 5px; background: #f1f1f1; cursor: default; border-radius: 10px; }
 #tasksDiv li:hover { background: #e2e2e2; }
 #tasksDiv li:focus, #tasksDiv li.selected { background: #bee0dd; outline: none; }
-#tasksDiv li button { width: 32px; height: 32px; margin-right: 2px; color: transparent; }
-#tasksDiv li button:hover { color: white; }
+#tasksDiv li button { width: 32px; height: 32px; margin-right: 2px; color: transparent; border-color: #999; }
+#tasksDiv li button:hover, #tasksDiv li button:focus { color: white; border-color: #009688; }
 #tasksDiv li span { display: inline-block; padding: 7px; min-width: 500px; border: 1px solid transparent; }
 #tasksDiv li span:focus { cursor: text; background: white; border-color: #bbb; }
 
@@ -62,7 +62,7 @@ html, body { margin: 0; padding: 0; }
 hr { margin: 5px 0; border: none; border-top: 1px solid #bbb; }
 
 button { border: 1px solid #666; padding: 5px 7px; border-radius: 5px; color: #666; background: none; }
-button:hover { background: #009688; color: white; border-color: #009688; }
+button:hover, button:focus { background: #009688; color: white; border-color: #009688; }
 
 input { padding: 5px; background: white; border: 1px solid #bbb; min-width: 200px; }
 input:hover { background: #f1f1f1; }
