--- a/scss/hanging-todo.scss
+++ b/scss/hanging-todo.scss
@@ -22,6 +22,8 @@ html, body {
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	background: white;
+	color: black;
 }
 
 #loaderDiv {
@@ -87,7 +89,7 @@ html, body {
 		color: #999;
 		position: absolute;
 		content: '▼';
-		right: 10px;
+		right: 12px;
 		top: 10px;
 	}
 
@@ -214,7 +216,7 @@ html, body {
 		padding: 0;
 		font-size: 11px;
 		font-weight: normal;
-		color: #666;
+		color: #999;
 	}
 }
 
@@ -283,10 +285,36 @@ html, body {
 #tasksDiv {
 	margin: 15px;
 
+	.addtask {
+		margin-bottom: 15px;
+	}
+
 	ul {
 		list-style: none;
-		margin: 10px 0;
+		margin: 0;
 		padding: 0;
+
+		&.Done, &.Archived {
+			li {
+				color: #00000066;
+				background: #f9f9f9;
+
+				button {
+					border-color: #00000033;
+					color: black;
+				}
+			}
+		}
+		&.Cancelled {
+			li {
+				color: #00000055;
+				background: #fafafa;
+
+				button {
+					border-color: #00000033;
+				}
+			}
+		}
 	}
 	li {
 		margin: 5px 0;
@@ -297,11 +325,11 @@ html, body {
 		transition: background-color 0.1s, color 0.1s;
 
 		&:hover {
-			background: #e2e2e2;
+			background: #e2e2e2 !important;
 		}
 
 		&:focus, &.selected {
-			background: #bee0dd;
+			background: #bee0dd !important;
 			outline: none;
 		}
 
@@ -313,7 +341,7 @@ html, body {
 			border-color: #00000066;
 
 			&:hover, &:focus {
-				color: white;
+				color: white !important;
 				border-color: $actionColor;
 			}
 		}
@@ -329,6 +357,7 @@ html, body {
 				background: white;
 				border-color: #bbb;
 				min-width: 500px;
+				color: black;
 			}
 		}
 
@@ -342,6 +371,43 @@ html, body {
 			border-radius: 5px;
 			vertical-align: middle;
 			margin-left: 5px;
+		}
+	}
+
+	h3 {
+		font-size: 1.0em;
+		margin: 15px 0 5px;
+		padding: 7px;
+
+		&.Done, &.Archived {
+			color: #666;
+		}
+		&.Cancelled {
+			color: #999;
+		}
+
+		&:hover {
+			background: #e2e2e2;
+		}
+
+		&::after {
+			display: inline-block;
+			margin-left: 5px;
+			font-size: 9px;
+			content: '▼';
+			line-height: 18px;
+			border: 1px solid #999;
+			color: #666;
+			text-align: center;
+			border-radius: 12px;
+			width: 20px;
+			height: 20px;
+			box-sizing: border-box;
+			vertical-align: middle;
+		}
+
+		&.expanded::after {
+			content: '▲';
 		}
 	}
 }
